--- a/archivo.html
+++ b/archivo.html
@@ -8,7 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Aqui vamos hacer un blog post</h1>
-    <p>Y este parrafo es inicio</p>
+  <header id="header">
+    <h1>Este es el titulo más atractivo </h1>
+    <p>Y este parrafo es inicio< donde puede ocurrir maravillosas cosas </p>
+  </header>
+    
 </body>
 </html>
