--- a/archivo.html
+++ b/archivo.html
@@ -9,6 +9,9 @@
 </head>
 <body>
   <header id="header">
+      <div class="cabecera">
+          Cabecera
+      </div>
     <h1>Este es el titulo más atractivo </h1>
     <p>Y este parrafo es inicio< donde puede ocurrir maravillosas cosas </p>
   </header>
