Finalizada con cabecera con diseño azul

--- a/archivo.html
+++ b/archivo.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <header id="header">
-      <div class="cabecera">
-          Cabecera
+      <div class="header__cabecera">
+          Hyperblog <span class="header__cabecera--subtitulo">Tu blog de confianza</span>
       </div>
     <h1>Este es el titulo más atractivo </h1>
     <p>Y este parrafo es inicio< donde puede ocurrir maravillosas cosas </p>
