Agregado el contenido del blog y cambio de tipografia

--- a/archivo.html
+++ b/archivo.html
@@ -11,6 +11,7 @@
   <header id="header">
     <h1>Este es el titulo más atractivo </h1>
     <p>Y este parrafo es inicio< donde puede ocurrir maravillosas cosas </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis molestias ab repellendus dignissimos repudiandae quis nisi, sed quisquam dolorum aliquam laborum? Eaque commodi repudiandae porro magnam tenetur officia perferendis consectetur?</p>
   </header>
     
 </body>
