--- a/archivo.html
+++ b/archivo.html
@@ -12,9 +12,14 @@
       <div class="header__cabecera">
           Hyperblog <span class="header__cabecera--subtitulo">Tu blog de confianza</span>
       </div>
+
     <h1>Este es el titulo más atractivo </h1>
-    <p>Y este parrafo es inicio< donde puede ocurrir maravillosas cosas </p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis molestias ab repellendus dignissimos repudiandae quis nisi, sed quisquam dolorum aliquam laborum? Eaque commodi repudiandae porro magnam tenetur officia perferendis consectetur?</p>
+
+    <p>Y este parrafo es inicio donde puede ocurrir maravillosas cosas. </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis 
+        molestias ab repellendus dignissimos repudiandae quis nisi, sed quisquam
+         dolorum aliquam laborum? Eaque commodi repudiandae porro magnam tenetur 
+         officia perferendis consectetur?</p>
   </header>
     
 </body>
