--- a/archivo.html
+++ b/archivo.html
@@ -10,7 +10,7 @@
 <body>
   <header id="header">
       <div class="header__cabecera">
-          Hyperblog <span class="header__cabecera--subtitulo">Tu blog de cabecera</span>
+          Hyperblog <span class="header__cabecera--subtitulo">Tu blog de master</span>
       </div>
 
     <h1>Este es el titulo más atractivo </h1>
