cambios de cabecera

--- a/archivo.html
+++ b/archivo.html
@@ -10,10 +10,10 @@
 <body>
   <header id="header">
       <div class="header__cabecera">
-          Hyperblog <span class="header__cabecera--subtitulo">Tu blog de confianza</span>
+          Hyperblog <span class="header__cabecera--subtitulo">Tu blog de cabecera</span>
       </div>
     <h1>Este es el titulo más atractivo </h1>
-    <p>Y este parrafo es inicio< donde puede ocurrir maravillosas cosas </p>
+    <p>Y este parrafo es inicio donde puede ocurrir maravillosas cosas </p>
   </header>
     
 </body>
